# netcdf-c

./: .travis.yml  CMakeLists.txt  Makefile.am  RELEASE_NOTES.md  cdf5.diffs  cdf5.diffs.all  cf  cf.cmake  config.h.cmake.in  configure.ac  libnetcdf.settings.in
docs/: guide.dox
include/: Makefile.am  err_macros.h  nc3internal.h  nc4internal.h  nc_tests.h  ncdispatch.h  ncinfo.h  ncprops.h  netcdf.h  netcdf_par.h
libdap2/: ncd2dispatch.c
libdispatch/: dcopy.c  ddispatch.c  derror.c  dfile.c  dv2i.c  dvarget.c  dvarput.c
liblib/: CMakeLists.txt  Makefile.am  nc_initialize.c
libsrc/: attr.c  attr.m4  nc3dispatch.c  nc3internal.c  ncx.c  ncx.h  ncx.m4  posixio.c  putget.c  v1hpg.c  var.c
libsrc4/: Makefile.am  nc4attr.c  nc4dispatch.c  nc4file.c  nc4hdf.c  nc4info.c  nc4internal.c  ncprops.c
libsrcp/: ncpdispatch.c
libsrcp5/: CMakeLists.txt  Makefile.am  ncp5dispatch.c
nc_test/: Make0  Makefile.am  nc_test.c  t_nc.c  t_nc_p5.c  test_get.c  test_get.m4  test_put.c  test_put.m4  test_read.c  test_write.c  tests.h  tst_atts.c  tst_atts3.c  tst_cdf5format.c  tst_formatx_pnetcdf.c  tst_misc.c  tst_names.c  tst_norm.c  tst_small.c  util.c
nc_test4/: Make0  Makefile.am  tst_create_files.c  tst_h4_lendian.c  tst_large.c  tst_large2.c  tst_large3.c  tst_large5.c  tst_mode.c  tst_types.c
ncdap_test/: t_ncf330.c
ncdump/: CMakeLists.txt  Make0  Makefile.am  nccopy.c  ncdump.c  ref_tst_ncf213.cdl  ref_tst_special_atts.cdl  tst_dimsizes.c  tst_dimsizes.sh  tst_fileinfo.c  tst_fileinfo.sh  tst_formatx3.sh  tst_lengths.sh  tst_netcdf4.sh  tst_netcdf4_4.sh
(+17 files in other folders)
